k8s/iterlaw-data/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iterlaw-postgres
  namespace: iterlaw-data
spec:
  type: ClusterIP
  selector:
    app: iterlaw-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
